deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynotes-api
spec:
  selector:
    app: mynotes-api
  ports:
    - port: 80
      targetPort: 3000
